hide scroll bars

--- a/public/css/initialize.css
+++ b/public/css/initialize.css
@@ -1,3 +1,10 @@
+body::-webkit-scrollbar,
+.contact::-webkit-scrollbar,
+form::-webkit-scrollbar {
+    width: 0px;
+    background: transparent; /* make scrollbar transparent */
+}
+
 .initialize-container {
     display: flex;
     flex-direction: column;
