--- a/views/initialize.handlebars
+++ b/views/initialize.handlebars
@@ -12,10 +12,10 @@
                         <option value="biweekly">Bi-Weekly</option>
                         <option value="monthly">Monthly</option>
                     </select>
-                    <label for="payRate">How much are you paid at the interval selected above? (e.g. if you selected
+                    <label for="payRate">How much are you paid each pay period? (e.g. if you selected
                         weekly
-                        above, your saying you get paid
-                        this much every week)</label>
+                        above, this is how much you get paid
+                        each week)</label>
                     <input class="initialize-container__input" action="/initialize" method="post" name="payRate"
                         type="number" min="0" step=".01" required placeholder="Pay rate...">
                     <label for="start">First pay day this month:</label>
