adding some bottom margin

--- a/public/css/register.css
+++ b/public/css/register.css
@@ -13,6 +13,7 @@
     justify-content: flex-start;
     align-items: center;
     transition: transform 750ms ease-in-out;
+    padding-bottom: 5rem;
 }
 
 .register h1 {
