--- a/public/css/initialize.css
+++ b/public/css/initialize.css
@@ -22,6 +22,7 @@ form::-webkit-scrollbar {
     z-index: 15;
     transition: transform 750ms ease-in-out;
     min-width: 15.5rem;
+    padding-bottom: 5rem;
 }
 
 .initialize-container::-webkit-scrollbar {
