--- a/public/css/initialize.css
+++ b/public/css/initialize.css
@@ -5,8 +5,10 @@ form::-webkit-scrollbar {
     background: transparent; /* make scrollbar transparent */
 }
 
-form {
-    padding-bottom: 5rem;
+.first,
+.second,
+.third {
+    padding-bottom: 4rem;
 }
 
 .initialize-container {
