--- a/public/css/initialize.css
+++ b/public/css/initialize.css
@@ -268,6 +268,7 @@ color: white;
 
 .first,
 .second,
-.third {
-    padding-bottom: 4rem;
+.third,
+.initialize-container {
+    padding-bottom: 5rem;
 }
