and more padding

--- a/public/css/initialize.css
+++ b/public/css/initialize.css
@@ -267,8 +267,11 @@ color: white;
 }
 
 .first,
-.second,
 .third,
 .initialize-container {
     padding-bottom: 5rem;
+}
+
+.second {
+    padding-bottom: 8rem;
 }
