--- a/views/initialize.handlebars
+++ b/views/initialize.handlebars
@@ -6,7 +6,7 @@
             need you to answer some questions to get started!</p>
         <div class="next-container">
             <div class="initialize-container__form-group first">
-                <label>Select how often your paid:</p>
+                <label>Select how often your paid:</label>
                     <select class="custom-select" method="post" name="payFrequency">
                         <option selected value="weekly">Weekly</option>
                         <option value="biweekly">Bi-Weekly</option>
@@ -17,7 +17,7 @@
                         above, this is how much you get paid
                         each week)</label>
                     <input class="initialize-container__input" action="/initialize" method="post" name="payRate"
-                        type="number" min="0" step=".01" required placeholder="Pay rate...">
+                        placeholder="Pay rate...">
                     <label for="start">First pay day this month:</label>
                     <input class="first-pay-day" action="/initialize" method="post" type="date" id="start"
                         name="firstPayDay" required>
