--- a/public/css/main.css
+++ b/public/css/main.css
@@ -14,9 +14,10 @@ body, html {
     align-content: center;
     width: 100vw;
     margin: 0;
-    padding: 0;
+    padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
     overflow: hidden;
     min-height: 500px;
+    padding-bottom: 20rem;
   }
   
   body::-webkit-scrollbar,
