--- a/views/initialize.handlebars
+++ b/views/initialize.handlebars
@@ -19,8 +19,8 @@
                     <input class="initialize-container__input" action="/initialize" method="post" name="payRate"
                         placeholder="Pay rate...">
                     <label for="start">First pay day this month:</label>
-                    <input class="first-pay-day" action="/initialize" method="post" type="text" id="start"
-                        name="firstPayDay" required>
+                    <input class="first-pay-day" action="/initialize" method="post" id="start"
+                        name="firstPayDay" type="date" required>
                     <button class="initialize-container__submit init1" type="button">
                         Next
                     </button>
