Fixing date picker errors

--- a/views/initialize.handlebars
+++ b/views/initialize.handlebars
@@ -20,7 +20,7 @@
                         placeholder="Pay rate...">
                     <label for="start">First pay day this month:</label>
                     <input class="first-pay-day" action="/initialize" method="post" id="start"
-                        name="firstPayDay" type="text" required>
+                        name="firstPayDay" type="date" required>
                     <button class="initialize-container__submit init1" type="button">
                         Next
                     </button>
