Added more responsiveness and added warning messages / form validators

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -4,6 +4,9 @@ form::-webkit-scrollbar {
     width: 0px;
     background: transparent; /* make scrollbar transparent */
 }
+html, body {
+    overflow: scroll;
+}
 
 .login {
     background: whitesmoke;
@@ -109,6 +112,7 @@ position: relative;
 }
 
 .login button:hover {
+    cursor: pointer;
     transform: translateY(-5px);
     box-shadow: 0 10px 20px rgba(0, 0, 0, .2);
 }
