--- a/views/users/login.handlebars
+++ b/views/users/login.handlebars
@@ -1,3 +1,7 @@
+<head>
+  <link rel="stylesheet" href="/css/login.css" type="text/css">
+</head>
+
 <form action="/users/login" method="post">
   <div class="login">
     <h1 class="login-header">
@@ -5,7 +9,7 @@
       <span class="login-header--text">Login</span>
     </h1>
     <div class="form-group">
-      <input type="text" placeholder="User Name" id="name" name="name" min="4" required>
+      <input type="text" placeholder="Email" id="email" name="email" min="4" required>
       <input type="password" placeholder="Password" id="password" name="password" min="4" required>
     </div>
     <div class="login__button-group">
