--- a/public/css/initialize.css
+++ b/public/css/initialize.css
@@ -18,7 +18,7 @@ form::-webkit-scrollbar {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    position: fixed;
+    position: relative;
     top: 0;
     left: 0;
     background: white;
