--- a/views/users/register.handlebars
+++ b/views/users/register.handlebars
@@ -1,14 +1,20 @@
+<head>
+  <link rel="stylesheet" href="/css/register.css" type="text/css">
+</head>
+
 <form action="/users/register" method="post">
   <div class="register">
     <h1>Register</h1>
     <div class="form-group">
       <input type="text" placeholder="User Name" id="name" name="name" value="{{name}}" min="4" required>
       <input type="email" placeholder="Email Address" id="email" name="email" value="{{email}}" min="5" required>
-      <input type="password" placeholder="Password" id="password" name="password"value="{{password}}" min="4" required>
-      <input type="password" placeholder="Verify Password" id="password2" name="password2"value="{{password2}}" min="4" required>
+      <input type="password" placeholder="Password" id="password" name="password" value="{{password}}" min="4" required>
+      <input type="password" placeholder="Verify Password" id="password2" name="password2" value="{{password2}}" min="4" required>
     </div>
-    <button class="submit" type="submit">
+    <button class="submit submit-button" type="submit">
       Submit
     </button>
+    <p class="not-registered">Have an account?</p>
+    <a href="/users/login" class="create-account">Login</a>
   </div>
 </form>
